@@ -60,6 +60,13 @@ AC_ARG_ENABLE(deflate,
 	enable_deflate=no)
 AM_CONDITIONAL(DEFLATE, test x$enable_deflate = xyes)
 
+AC_ARG_WITH(session-id,
+	AS_HELP_STRING([--session-id=SIZE],
+		[Sets the size of the session id (default: 8)]))
+if test x$with_session_id != xno; then
+	AC_DEFINE_UNQUOTED([SESSION_ID_SIZE], $with_session_id)
+fi
+
 dnl
 dnl DEBUG
 dnl
